--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,9 @@
 }
 
 html {
-    height: 100%;
-    background: linear-gradient(180deg, #f0eeeb 0%, #e9e6e4 100%);
+    min-height: 100%;
+    background: linear-gradient(180deg, #f0eeeb 0%, #e9e6e4 100%) fixed;
+    background-attachment: fixed;
     font-size: 14px;
 }
 
@@ -19,7 +20,7 @@ body {
     font-family: 'Inter', sans-serif;
     line-height: 1.6;
     color: #2a2a2a;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     padding: 16px 0px;
@@ -39,7 +40,7 @@ body {
     display: flex;
     flex-direction: column;
     flex: 1;
-    height: 100%;
+    min-height: 100%;
     border-bottom: 1px solid white;
     border-top: 1px solid white;
 }
@@ -58,7 +59,7 @@ main {
     display: flex;
     flex-direction: column;
     flex: 1;
-    height: 100%;
+    min-height: 100%;
     justify-content: space-between;
 }
 
@@ -167,6 +168,7 @@ section {
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
+    scroll-margin-bottom: 20px;
 }
 
 .form-group {
@@ -436,26 +438,12 @@ textarea:focus {
 @media (max-width: 520px) {
 
 
-    html {
-        height: auto;
-        min-height: 100%;
-    }
-
-    body {
-        height: auto;
-        min-height: 100%;
-    }
-
     #app {
         padding: 0px 16px;
-        height: auto;
-        min-height: 100%;
     }
 
     main {
         padding: 16px 16px 32px 16px;
-        height: auto;
-        min-height: 100%;
     }
 
     .clue-section {
@@ -466,6 +454,10 @@ textarea:focus {
     @media (max-height: 600px) {
         .clue-section {
             flex: 0 0 auto;
+        }
+        
+        .input-section {
+            position: relative;
         }
     }
 
